examples/ast-python/src/tests/corpus/snapshots/ast_python__tests__corpus__pattern_matching__match_is_match_but_not_pattern_matching.snap
---
source: examples/ast-python/src/tests/corpus/pattern_matching.rs
expression: "get_ast(& db, file)"
---
ParsedAst {
    nodes: [
        Module {
            children: [
                AstNodeId {
                    id: 1,
                    _marker: PhantomData<ast_python::generated::CompoundStatement_SimpleStatement>,
                },
                AstNodeId {
                    id: 6,
                    _marker: PhantomData<ast_python::generated::CompoundStatement_SimpleStatement>,
                },
            ],
            _range: Range {
                start_byte: 1,
                end_byte: 29,
                start_point: Point {
                    row: 1,
                    column: 0,
                },
                end_point: Point {
                    row: 3,
                    column: 0,
                },
            },
            _id: 0,
            _parent: None,
            _is_missing: false,
        },
        SimpleStatement(
            ExpressionStatement(
                ExpressionStatement {
                    children: [
                        AstNodeId {
                            id: 2,
                            _marker: PhantomData<ast_python::generated::Assignment_AugmentedAssignment_Expression_Yield>,
                        },
                    ],
                    _range: Range {
                        start_byte: 1,
                        end_byte: 12,
                        start_point: Point {
                            row: 1,
                            column: 0,
                        },
                        end_point: Point {
                            row: 1,
                            column: 11,
                        },
                    },
                    _id: 1,
                    _parent: Some(
                        0,
                    ),
                    _is_missing: false,
                },
            ),
        ),
        Assignment(
            Assignment {
                left: AstNodeId {
                    id: 3,
                    _marker: PhantomData<ast_python::generated::Pattern_PatternList>,
                },
                right: Some(
                    AstNodeId {
                        id: 4,
                        _marker: PhantomData<ast_python::generated::Assignment_AugmentedAssignment_Expression_ExpressionList_PatternList_Yield>,
                    },
                ),
                Type: None,
                _range: Range {
                    start_byte: 1,
                    end_byte: 12,
                    start_point: Point {
                        row: 1,
                        column: 0,
                    },
                    end_point: Point {
                        row: 1,
                        column: 11,
                    },
                },
                _id: 2,
                _parent: Some(
                    1,
                ),
                _is_missing: false,
            },
        ),
        Pattern(
            Identifier(
                Identifier {
                    _range: Range {
                        start_byte: 1,
                        end_byte: 2,
                        start_point: Point {
                            row: 1,
                            column: 0,
                        },
                        end_point: Point {
                            row: 1,
                            column: 1,
                        },
                    },
                    _id: 3,
                    _parent: Some(
                        2,
                    ),
                    _is_missing: false,
                },
            ),
        ),
        Expression(
            PrimaryExpression(
                List(
                    List {
                        children: [
                            AstNodeId {
                                id: 5,
                                _marker: PhantomData<ast_python::generated::Expression_ListSplat_ParenthesizedListSplat_Yield>,
                            },
                        ],
                        _range: Range {
                            start_byte: 5,
                            end_byte: 12,
                            start_point: Point {
                                row: 1,
                                column: 4,
                            },
                            end_point: Point {
                                row: 1,
                                column: 11,
                            },
                        },
                        _id: 4,
                        _parent: Some(
                            2,
                        ),
                        _is_missing: false,
                    },
                ),
            ),
        ),
        Expression(
            PrimaryExpression(
                Identifier(
                    Identifier {
                        _range: Range {
                            start_byte: 6,
                            end_byte: 11,
                            start_point: Point {
                                row: 1,
                                column: 5,
                            },
                            end_point: Point {
                                row: 1,
                                column: 10,
                            },
                        },
                        _id: 5,
                        _parent: Some(
                            4,
                        ),
                        _is_missing: false,
                    },
                ),
            ),
        ),
        SimpleStatement(
            ExpressionStatement(
                ExpressionStatement {
                    children: [
                        AstNodeId {
                            id: 7,
                            _marker: PhantomData<ast_python::generated::Assignment_AugmentedAssignment_Expression_Yield>,
                        },
                    ],
                    _range: Range {
                        start_byte: 13,
                        end_byte: 28,
                        start_point: Point {
                            row: 2,
                            column: 0,
                        },
                        end_point: Point {
                            row: 2,
                            column: 15,
                        },
                    },
                    _id: 6,
                    _parent: Some(
                        0,
                    ),
                    _is_missing: false,
                },
            ),
        ),
        Assignment(
            Assignment {
                left: AstNodeId {
                    id: 8,
                    _marker: PhantomData<ast_python::generated::Pattern_PatternList>,
                },
                right: Some(
                    AstNodeId {
                        id: 9,
                        _marker: PhantomData<ast_python::generated::Assignment_AugmentedAssignment_Expression_ExpressionList_PatternList_Yield>,
                    },
                ),
                Type: None,
                _range: Range {
                    start_byte: 13,
                    end_byte: 28,
                    start_point: Point {
                        row: 2,
                        column: 0,
                    },
                    end_point: Point {
                        row: 2,
                        column: 15,
                    },
                },
                _id: 7,
                _parent: Some(
                    6,
                ),
                _is_missing: false,
            },
        ),
        Pattern(
            Identifier(
                Identifier {
                    _range: Range {
                        start_byte: 13,
                        end_byte: 18,
                        start_point: Point {
                            row: 2,
                            column: 0,
                        },
                        end_point: Point {
                            row: 2,
                            column: 5,
                        },
                    },
                    _id: 8,
                    _parent: Some(
                        7,
                    ),
                    _is_missing: false,
                },
            ),
        ),
        Expression(
            PrimaryExpression(
                List(
                    List {
                        children: [
                            AstNodeId {
                                id: 10,
                                _marker: PhantomData<ast_python::generated::Expression_ListSplat_ParenthesizedListSplat_Yield>,
                            },
                        ],
                        _range: Range {
                            start_byte: 21,
                            end_byte: 28,
                            start_point: Point {
                                row: 2,
                                column: 8,
                            },
                            end_point: Point {
                                row: 2,
                                column: 15,
                            },
                        },
                        _id: 9,
                        _parent: Some(
                            7,
                        ),
                        _is_missing: false,
                    },
                ),
            ),
        ),
        Expression(
            PrimaryExpression(
                Identifier(
                    Identifier {
                        _range: Range {
                            start_byte: 22,
                            end_byte: 27,
                            start_point: Point {
                                row: 2,
                                column: 9,
                            },
                            end_point: Point {
                                row: 2,
                                column: 14,
                            },
                        },
                        _id: 10,
                        _parent: Some(
                            9,
                        ),
                        _is_missing: false,
                    },
                ),
            ),
        ),
    ],
}
